Prevent exception building layout tables for subclasses